prevent pipeline container scaling
*when error message from validation is too long

--- a/frontend/src/app/annotation-pipeline/annotation-pipeline.component.css
+++ b/frontend/src/app/annotation-pipeline/annotation-pipeline.component.css
@@ -72,6 +72,7 @@
   justify-content: center;
   flex-direction: column;
   gap: 25px;
+  width: min-content;
 }
 
 #pipeline-actions {
